assets/app.css
/* ... */
#main-cover-img.circled {
  background-size: cover;
  border-radius: 100%;
}

#main-elapsed-circle {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  stroke-width: 4;
}

#main-elapsed-circle .inactive {
  stroke-opacity: 0.5;
}

#main-elapsed-circle.hide {
  visibility: hidden;
}

#main-title {
  font-size: 20px;
}

#main-artist {
  font-size: 20px;
}

#system h1,
#system h3 {
  margin: 10px;
}

#system .note {
  list-style-type: none;
  padding: 0 20px;
}

#system .note li {
  align-items: center;
  display: flex;
}

#system .note li .description {
  font-size: 18px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  flex: 1 1 auto;
  padding: 8px 0;
}

.switch {
  margin: 5px;
  width: 100px;
  height: 30px;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

.switch input {
  display: none;
}

.switch label,
.switch input:checked + label {
  position: relative;
  display: block;
  width: 100px;
  height: 30px;
  border-radius: 30px;
  border: solid 3px #404040;
  box-sizing: border-box;
  transition: border 0.2s 0s ease;
}

.dark .switch label,
.dark .switch input:checked + label {
  border: solid 3px #e0e0e0;
}

.switch label:before,
.switch label:after {
  content: "";
  display: block;
  position: absolute;
  top: -3px;
}

.switch label:before {
  left: -3px;
  background-color: #404040;
  height: 30px;
  width: 40px;
  border-radius: 30px;
  transition: background-color 0.2s 0s ease, width 0.2s 0s ease;
}

.dark .switch label:before {
  background-color: #e0e0e0;
}

.switch label:after {
  left: -3px;
  width: 56px;
  background-color: #ffffff;
  height: 30px;
  border: solid 3px #404040;
  border-radius: 30px;
  box-sizing: border-box;
  transition: background-color 0.2s 0s ease, border 0.2s 0s ease, left 0.2s 0s ease;
}

.dark .switch label:after {
  background-color: #202020;
  border: solid 3px #e0e0e0;
}

.switch input:checked + label:before {
  width: 100px;
}

.switch input:checked + label:after {
  left: 41px;
}

.button-simple {
  border-radius: 24px;
  height: 30px;
  margin: 5px;
  display: flex;
  align-items: center;
  padding: 0 24px;
  font-size: 18px;
  color: #e0e0e0;
  background-color: #404040;
  box-sizing: border-box;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  transition: background-color 0.2s 0s ease, color 0.2s 0s ease, padding 0.2s 0s linear;
}

.animation .button-simple:hover {
  animation: hover_img 0.5s linear 0s;
}

.button-simple.active,
.button-simple:active {
  color: #a0a0a0;
  padding: 4px 24px 0 24px;
}

.button-simple:disabled {
  animation: none;
  color: #a0a0a0;
  background-color: #303030;
  padding: 4px 24px 0 24px;
}

.dark .button-simple {
  color: #404040;
  background-color: #e0e0e0;
}

.dark .button-simple.active,
.dark .button-simple:active {
  color: #808080;
}

.dark .button-simple:disabled {
  animation: none;
  color: #808080;
  background-color: #f0f0f0;
}

.tool-select {
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100px;
  height: 30px;
  border: none;
  border-radius: 30px;
  background-color: #404040;
  font-size: 18px;
  color: #ffffff;
  padding: 5px 5px 0 50px;
  margin: 5px;
  transition: background-color 0.2s 0s ease, color 0.2s 0s ease;
}

.tool-select:-moz-focusring {
  outline: 0;
  color: transparent;
  text-shadow: 0 0 0 #ffffff;
  transition: none;
}

.dark .tool-select {
  background-color: #e0e0e0;
  color: #404040;
}

.dark .tool-select:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #404040;
}

#error {
  position: fixed;
  top: 40px;
  right: -400px;
  margin: 10px;
  padding: 5px;
  width: 300px;
  background-color: #ffffff;
  z-index: 20;
}

.dark #error {
  background-color: #404040;
}

#error.hide {
  display: none;
}

.animation #error.hide {
  display: block;
  animation: error-hide 0.3s linear 0s;
}

#error.show {
  display: block;
  right: 0;
}

.animation #error.show {
  animation: error-show 0.3s linear 0s;
}

@keyframes error-show {
  from {
    right: -400px;
  }

  to {
    right: 0;
  }
}

@keyframes error-hide {
  from {
    right: 0;
  }

  to {
    right: -400px;
  }
}

#error > * {
  margin: 10px;
}

button {
  outline: 0;
  padding: 0;
  margin: 0;
  border: 0;
  background-color: rgba(255, 255, 255, 0);
}

.header-items {
  display: flex;
  align-items: center;
  justify-content: space-between;
  align-content: space-around;
  list-style-type: none;
  margin: 0;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
}

.header-item {
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  display: flex;
  align-items: center;
  width: 40px;
}

.header-item:first-of-type {
  margin: 0;
}

.header-item:nth-of-type(n+2) {
  margin: 0 0 0 12px;
}

.header-item.icon {
  justify-content: center;
}

.header-item.iconlabel {
  flex: 1 1 auto;
  flex-flow: row nowrap;
  width: 40px;
}

.header-item:hover,
.header-item:active {
  outline: 0;
}

.header-icon {
  width: 40px;
  height: 40px;
  stroke-width: 20;
  transition: width 0.2s 0s ease, height 0.2s 0s ease;
}

.animation .header-item:hover .header-icon {
  animation: hover_img 0.5s linear 0s;
}

.header-item:active .header-icon,
.header-item.active .header-icon {
  width: 36px;
  height: 36px;
}

.header-label {
  flex: 1 1 auto;
  width: 40px;
}

.view-list #menu-back.root {
  visibility: hidden;
}

.view-system #menu-back-content {
  display: none;
}

@media (orientation: portrait) {
  .header-items {
    padding: 15px 5% 0;
  }

  .view-main #menu-main {
    visibility: hidden;
  }

  .view-main #menu-back-content {
    display: none;
  }
}

@media (orientation: landscape) {
  .header-items {
    padding: 15px 10px;
  }

  .view-main #menu-back.root {
    visibility: hidden;
  }
}

#control {
  padding: 0 10px;
  border: 0;
  height: 90px;
  display: flex;
  align-items: center;
  align-content: space-around;
  flex-wrap: wrap;
  justify-content: space-between;
}
/* ... */

